--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
 title: 业务逻辑拆分模式
-tagline: Autonomy > Feedback > Consistency
+description: Autonomy > Feedback > Consistency
