--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,3 +2,4 @@ theme: jekyll-theme-slate
 title: 业务逻辑拆分模式
 description: Autonomy > Feedback > Consistency
 google_analytics: UA-311653-15
+lang: zh-CN
