--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-slate
 title: 业务逻辑拆分模式
-description: Autonomy > Feedback > Consistency
+description: https://autonomy.design
 google_analytics: UA-311653-15
 lang: zh-CN
