--- a/sample/package.json
+++ b/sample/package.json
@@ -5,6 +5,10 @@
     "workspaces": ["*"],
     "devDependencies": {
         "ts-node": "^9.1.1",
-        "typescript": "^4.2.2"
+        "typescript": "^4.2.2",
+        "@types/node": "^14.14.31"
+    },
+    "scripts": {
+        "build": "ts-node build.ts"
     }
 }
