--- a/sample/merchandise/motherboard/package.json
+++ b/sample/merchandise/motherboard/package.json
@@ -1,7 +1,7 @@
 {
     "version": "0.0.1",
     "private": true,
-    "name": "@autonomy-design-sample/ordinary-product",
+    "name": "@merchandise/motherboard",
     "dependencies": {
         "@autonomy-design-sample/entity-archetype": "0.0.1"
     }
