--- a/sample/package.json
+++ b/sample/package.json
@@ -2,11 +2,12 @@
     "version": "0.0.1",
     "private": true,
     "name": "@autonomy-design-sample/dev",
-    "workspaces": ["*"],
+    "workspaces": ["entity-archetype", "merchandise/*", "wms/*"],
     "devDependencies": {
         "ts-node": "^9.1.1",
         "typescript": "^4.2.2",
-        "@types/node": "^14.14.31"
+        "@types/node": "^14.14.31",
+        "@babel/preset-typescript": "^7.13.0"
     },
     "scripts": {
         "build": "ts-node build.ts"
