--- a/sample/package.json
+++ b/sample/package.json
@@ -10,6 +10,6 @@
         "@babel/preset-typescript": "^7.13.0"
     },
     "scripts": {
-        "build": "ts-node build.ts"
+        "build": "ts-node build.ts @merchandise/project"
     }
 }
