--- a/sample/package.json
+++ b/sample/package.json
@@ -11,6 +11,7 @@
         "@babel/plugin-syntax-decorators": "^7.12.13",
         "@babel/plugin-transform-modules-commonjs": "^7.13.8",
         "@babel/plugin-transform-react-jsx": "^7.12.17",
+        "@babel/plugin-proposal-class-properties": "^7.13.0",
         "@babel/core": "^7.13.0",
         "@types/babel__core": "^7.1.12",
         "webpack": "^5.24.2",
