--- a/sample/entity-archetype/package.json
+++ b/sample/entity-archetype/package.json
@@ -1,15 +1,7 @@
 {
     "version": "0.0.1",
     "private": true,
-    "name": "@autonomy-design-sample/entity-archetype",
+    "name": "@autonomy/entity-archetype",
     "main": "src/index.ts",
-    "module": "esm/index.js",
-    "dependencies": {
-        "react": "^17.0.1",
-        "react-dom": "^17.0.1"
-    },
-    "devDependencies": {
-        "@types/react": "^17.0.2",
-        "@types/react-dom": "^17.0.1"
-    }
+    "module": "esm/index.js"
 }
