--- a/sample/package.json
+++ b/sample/package.json
@@ -2,7 +2,7 @@
     "version": "0.0.1",
     "private": true,
     "name": "@autonomy-design-sample/dev",
-    "workspaces": ["entity-archetype", "merchandise/*", "wms/*"],
+    "workspaces": ["entity-archetype", "reactive-widget", "merchandise/*", "wms/*"],
     "devDependencies": {
         "ts-node": "^9.1.1",
         "typescript": "^4.2.2",
@@ -18,11 +18,14 @@
         "webpack-cli": "^4.5.0",
         "@webpack-cli/serve": "^1.3.0",
         "webpack-dev-server": "^3.11.2",
-        "html-webpack-plugin": "^5.2.0"
+        "html-webpack-plugin": "^5.2.0",
+        "npm-run-all": "^4.1.5"
     },
     "scripts": {
-        "build-entity-archetype": "cd entity-archetype && yarn tsc",
-        "build": "yarn build-entity-archetype && ts-node build.ts @merchandise/project",
+        "build:entity-archetype": "cd entity-archetype && yarn tsc",
+        "build:reactive-widget": "cd reactive-widget && yarn tsc",
+        "build:merchandise": "ts-node build.ts @merchandise/project",
+        "build": "run-p build:**",
         "start": "ts-node start.ts @merchandise/project"
     }
 }
