--- a/sample/reactive-widget/package.json
+++ b/sample/reactive-widget/package.json
@@ -1,16 +1,17 @@
 {
-    "version": "0.0.1",
-    "private": true,
-    "name": "@autonomy/reactive-widget",
-    "main": "src/index.ts",
-    "module": "esm/index.js",
-    "dependencies": {
-        "@autonomy/entity-archetype": "0.0.1",
-        "react": "^17.0.1",
-        "react-dom": "^17.0.1"
-    },
-    "devDependencies": {
-        "@types/react": "^17.0.2",
-        "@types/react-dom": "^17.0.1"
-    }
+  "version": "0.0.1",
+  "private": true,
+  "name": "@autonomy/reactive-widget",
+  "main": "src/index.ts",
+  "module": "esm/index.js",
+  "dependencies": {
+    "@autonomy/entity-archetype": "0.0.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
+    "@types/scheduler": "^0.16.1"
+  }
 }
