--- a/sample/entity-archetype/tsconfig.json
+++ b/sample/entity-archetype/tsconfig.json
@@ -6,11 +6,11 @@
         "strict": true,
         "moduleResolution": "node",
         "experimentalDecorators": true,
-        "module": "ES2015",
+        "module": "CommonJS",
         "sourceMap": true,
         "declaration": true,
         "strictPropertyInitialization": false,
-        "outDir": "esm",
+        "outDir": "lib",
         "jsx": "react"
     },
     "include": ["./src/**/*"]
