--- a/sample/package.json
+++ b/sample/package.json
@@ -19,7 +19,8 @@
         "@webpack-cli/serve": "^1.3.0",
         "webpack-dev-server": "^3.11.2",
         "html-webpack-plugin": "^5.2.0",
-        "npm-run-all": "^4.1.5"
+        "npm-run-all": "^4.1.5",
+        "nodemon": "^2.0.7"
     },
     "scripts": {
         "build:entity-archetype": "cd entity-archetype && yarn tsc",
