add syncData to widget

--- a/sample/entity-archetype/package.json
+++ b/sample/entity-archetype/package.json
@@ -3,5 +3,5 @@
     "private": true,
     "name": "@autonomy/entity-archetype",
     "main": "lib/index.js",
-    "typings": "lib/index.d.ts"
+    "typings": "src/index.ts"
 }
