--- a/sample/reactive-widget/package.json
+++ b/sample/reactive-widget/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "name": "@autonomy/reactive-widget",
   "main": "lib/index.js",
-  "typings": "lib/index.d.ts",
+  "typings": "src/index.ts",
   "dependencies": {
     "@autonomy/entity-archetype": "0.0.1",
     "react": "^17.0.1",
