--- a/sample/autonomy/demo/package.json
+++ b/sample/autonomy/demo/package.json
@@ -3,5 +3,9 @@
     "private": true,
     "name": "@autonomy/demo",
     "main": "lib/index.js",
-    "typings": "src/index.ts"
+    "typings": "src/index.ts",
+    "dependencies": {
+        "@autonomy/io": "0.0.1",
+        "@autonomy/io-react": "0.0.1"
+    }
 }
