--- a/sample/autonomy/demo-project/package.json
+++ b/sample/autonomy/demo-project/package.json
@@ -10,6 +10,7 @@
     "scripts": {
         "build:io": "cd ../io && yarn tsc",
         "build:io-react": "cd ../io-react && yarn tsc",
+        "build:io-server": "cd ../io-server && yarn tsc",
         "build:demo-project": "cd ../../ && ts-node build.ts @autonomy/demo-project",
         "build": "run-p build:**",
         "start": "cd ../../ && ts-node start.ts @autonomy/demo-project"
