--- a/sample/autonomy/io-react/package.json
+++ b/sample/autonomy/io-react/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "@autonomy/io": "0.0.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-error-boundary": "^3.1.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.2",
