--- a/sample/package.json
+++ b/sample/package.json
@@ -25,6 +25,7 @@
     "scripts": {
         "build:io": "cd autonomy/io && yarn tsc",
         "build:io-react": "cd autonomy/io-react && yarn tsc",
+        "build:io-server": "cd autonomy/io-server && yarn tsc",
         "build:merchandise": "ts-node build.ts @merchandise/project",
         "build": "run-p build:**",
         "start": "ts-node start.ts @merchandise/project"
