--- a/sample/package.json
+++ b/sample/package.json
@@ -1,8 +1,8 @@
 {
     "version": "0.0.1",
     "private": true,
-    "name": "@autonomy/dev",
-    "workspaces": ["autonomy/*", "merchandise/*", "wms/*"],
+    "name": "@stableinf/dev",
+    "workspaces": ["stableinf/*", "merchandise/*", "wms/*"],
     "devDependencies": {
         "ts-node": "^9.1.1",
         "typescript": "^4.2.2",
