--- a/sample/stableinf/demo/package.json
+++ b/sample/stableinf/demo/package.json
@@ -1,7 +1,9 @@
 {
     "version": "0.0.1",
     "private": true,
-    "name": "@merchandise/motherboard",
+    "name": "@stableinf/demo",
+    "main": "lib/index.js",
+    "typings": "src/index.ts",
     "dependencies": {
         "@stableinf/io": "0.0.1",
         "@stableinf/io-react": "0.0.1"
