--- a/sample/wms/project/package.json
+++ b/sample/wms/project/package.json
@@ -3,7 +3,7 @@
     "private": true,
     "name": "@wms/ordinary-project",
     "dependencies": {
-        "@autonomy/io": "0.0.1",
+        "@stableinf/io": "0.0.1",
         "@wms/motherboard": "0.0.1",
         "@wms/ordinary-fulfilment": "0.0.1"
     }
