--- a/sample/package.json
+++ b/sample/package.json
@@ -23,9 +23,9 @@
         "nodemon": "^2.0.7"
     },
     "scripts": {
-        "build:io": "cd autonomy/io && yarn tsc",
-        "build:io-react": "cd autonomy/io-react && yarn tsc",
-        "build:io-server": "cd autonomy/io-server && yarn tsc",
+        "build:io": "cd stableinf/io && yarn tsc",
+        "build:rx-react": "cd stableinf/rx-react && yarn tsc",
+        "build:io-server": "cd stableinf/io-server && yarn tsc",
         "build:merchandise": "ts-node build.ts @merchandise/project",
         "build": "run-p build:**",
         "start": "ts-node start.ts @merchandise/project"
