--- a/sample/stableinf/demo/package.json
+++ b/sample/stableinf/demo/package.json
@@ -6,6 +6,6 @@
     "typings": "src/index.ts",
     "dependencies": {
         "@stableinf/io": "0.0.1",
-        "@stableinf/io-react": "0.0.1"
+        "@stableinf/rx-react": "0.0.1"
     }
 }
