--- a/sample/stableinf/rx-react/package.json
+++ b/sample/stableinf/rx-react/package.json
@@ -1,7 +1,7 @@
 {
   "version": "0.0.1",
   "private": true,
-  "name": "@stableinf/io-react",
+  "name": "@stableinf/rx-react",
   "main": "lib/index.js",
   "typings": "src/index.ts",
   "dependencies": {
