--- a/sample/stableinf/mem-cloud/package.json
+++ b/sample/stableinf/mem-cloud/package.json
@@ -1,7 +1,7 @@
 {
     "version": "0.0.1",
     "private": true,
-    "name": "@stableinf/io-server",
+    "name": "@stableinf/mem-cloud",
     "main": "lib/index.js",
     "typings": "src/index.ts",
     "dependencies": {
