--- a/sample/package.json
+++ b/sample/package.json
@@ -20,7 +20,8 @@
         "webpack-dev-server": "^3.11.2",
         "html-webpack-plugin": "^5.2.0",
         "npm-run-all": "^4.1.5",
-        "nodemon": "^2.0.7"
+        "nodemon": "^2.0.7",
+        "esbuild": "^0.8.55"
     },
     "scripts": {
         "build:io": "cd stableinf/io && yarn tsc",
