--- a/sample/stableinf/cloud-mem/package.json
+++ b/sample/stableinf/cloud-mem/package.json
@@ -2,13 +2,12 @@
     "version": "0.0.1",
     "private": true,
     "name": "@stableinf/cloud-mem",
-    "main": "lib/index.js",
-    "typings": "src/index.ts",
+    "main": "src/index.ts",
     "dependencies": {
-      "@stableinf/io": "0.0.1"
+        "@stableinf/io": "0.0.1",
+        "@stableinf/cloud": "0.0.1"
     },
     "devDependencies": {
-      "@types/node": "^14.14.31"
+        "@types/node": "^14.14.31"
     }
-  }
-  
+}
