--- a/sample/stableinf/io/package.json
+++ b/sample/stableinf/io/package.json
@@ -2,6 +2,5 @@
     "version": "0.0.1",
     "private": true,
     "name": "@stableinf/io",
-    "main": "lib/index.js",
-    "typings": "src/index.ts"
+    "main": "src/index.ts"
 }
