--- a/sample/package.json
+++ b/sample/package.json
@@ -4,32 +4,19 @@
     "name": "@stableinf/dev",
     "workspaces": ["stableinf/*", "merchandise/*", "wms/*"],
     "devDependencies": {
-        "ts-node": "^9.1.1",
         "typescript": "^4.2.2",
         "@types/node": "^14.14.31",
-        "@babel/preset-typescript": "^7.13.0",
+        "@babel/plugin-syntax-typescript": "^7.12.13",
         "@babel/plugin-syntax-decorators": "^7.12.13",
-        "@babel/plugin-transform-modules-commonjs": "^7.13.8",
-        "@babel/plugin-transform-react-jsx": "^7.12.17",
-        "@babel/plugin-proposal-class-properties": "^7.13.0",
-        "@babel/core": "^7.13.0",
-        "@types/babel__core": "^7.1.12",
-        "webpack": "^5.24.2",
-        "webpack-cli": "^4.5.0",
-        "@webpack-cli/serve": "^1.3.0",
-        "webpack-dev-server": "^3.11.2",
-        "html-webpack-plugin": "^5.2.0",
-        "npm-run-all": "^4.1.5",
-        "nodemon": "^2.0.7",
+        "@babel/parser": "^7.13.9",
+        "@babel/generator": "^7.13.9",
+        "@types/babel__generator": "^7.6.2",
+        "convert-source-map": "^1.7.0",
+        "@types/convert-source-map": "^1.5.1",
         "esbuild": "^0.8.55"
     },
     "scripts": {
-        "build:io": "cd stableinf/io && yarn tsc",
-        "build:rx-react": "cd stableinf/rx-react && yarn tsc",
-        "build:mem-cloud": "cd stableinf/mem-cloud && yarn tsc",
-        "build:merchandise": "ts-node build.ts @merchandise/project",
-        "build": "run-p build:**",
-        "start": "ts-node start.ts @merchandise/project",
-	"deploy": "yarn stableinf-deploy @merchandise/project"
+	    "dev:merchandise": "yarn stableinf dev @merchandise/project",
+	    "dev:demo": "yarn stableinf dev @stableinf/demo-project"
     }
 }
