--- a/sample/stableinf/demo/package.json
+++ b/sample/stableinf/demo/package.json
@@ -2,8 +2,7 @@
     "version": "0.0.1",
     "private": true,
     "name": "@stableinf/demo",
-    "main": "lib/index.js",
-    "typings": "src/index.ts",
+    "main": "src/index.ts",
     "dependencies": {
         "@stableinf/io": "0.0.1",
         "@stableinf/rx-react": "0.0.1"
