--- a/sample/stableinf/deploy/package.json
+++ b/sample/stableinf/deploy/package.json
@@ -4,6 +4,7 @@
     "dependencies": {
         "pirates": "^4.0.1",
         "commander": "^7.1.0",
+        "chokidar": "^3.5.1",
         "@stableinf/cloud": "0.0.1",
         "@stableinf/cloud-mem": "0.0.1"
     },
