--- a/sample/stableinf/rx-react/package.json
+++ b/sample/stableinf/rx-react/package.json
@@ -12,6 +12,8 @@
   "devDependencies": {
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
-    "@types/scheduler": "^0.16.1"
+    "@types/scheduler": "^0.16.1",
+    "@types/mocha": "^8.2.1",
+    "mocha": "^8.3.1"
   }
 }
