--- a/sample/stableinf/cloud-mem/package.json
+++ b/sample/stableinf/cloud-mem/package.json
@@ -5,7 +5,8 @@
     "main": "src/index.ts",
     "dependencies": {
         "@stableinf/io": "0.0.1",
-        "@stableinf/cloud": "0.0.1"
+        "@stableinf/cloud": "0.0.1",
+        "source-map-support": "^0.5.19"
     },
     "devDependencies": {
         "@types/node": "^14.14.31"
